tests/fixtures/invalid/pow_str_none_none.py
# Cannot call pow() with Str, None, None
x = pow("hello", None, None)
